--- a/模块化.md
+++ b/模块化.md
@@ -12,7 +12,7 @@
     'use strict';
     var a = 'Hello';
     function greet(name){
-    console.log(s+','+name+'!');
+        console.log(s+','+name+'!');
     }
     module.export = greet;		//把greet作为模块暴露出去，其他模块就可以使用greet
                                 //node会依次在内置模块、全局模块、当前模块下查找hello.js
@@ -32,15 +32,15 @@ greet(s);		//hello,Michael
 模块的输出module.exports的实现：
 ```
     var module = {
-    id:'hello',
-    exports:{}
+        id:'hello',
+        exports:{}
     };
     var load = function(module){
-    function greet(name){
-    console.log('Hello,'+name +'!');
+        function greet(name){
+        console.log('Hello,'+name +'!');
     }
     module.exports = greet;
-    return module.exports;
+        return module.exports;
     };
     var exported = load(module);	//module是load函数中的一个参数
     save(module,exported);
@@ -50,8 +50,10 @@ greet(s);		//hello,Michael
 - 模块化系统：
 webapp是一个单页面应用，每个视图通过异步加载
     1. commonjs
-        服务器端端node.js遵循commonjs规范，允许模块通过require来同步加载所要依赖的其他模块，
+        服务器端端node.js遵循commonjs规范，允许模块通过require来同步加载所要依赖的其他模块
+
         优点：通过exports或module.export来导出需要暴露的接口，利于服务端模块重用
+
         实现：服务端的node.js、Browserify浏览器的commonjs实现、
         ```
         require("module");
@@ -61,30 +63,39 @@ webapp是一个单页面应用，每个视图通过异步加载
         ```
     2. AMD
         Asynchronous Module Definition规范只有一个主要接口define(id?,dependencies?,factory)
-        要在声明模块的时候指定所有的依赖dependencies，并且还要当做形参传到 factory 中，
+        要在声明模块的时候指定所有的依赖dependencies，并且还要当做形参传到 factory 中
         对于依赖的模块提前执行，依赖前置。
+
         优点：适合浏览器环境中的异步加载模块 可并行加载多个模块
+
         缺点：提高了开发成本
+
         实现：requirejs
     3. CMD
         Common Module Definition规范和AMD很相似 与CommonJS、AMD兼容
+
         优点：依赖就近，延迟执行
+
         缺点：依赖SPM打包，模块的加载逻辑偏重
     4. UMD	
         Universal Module Definition 规范类似于兼容CommonJS和AMD的语法糖 
         是模块定义的跨平台解决方案
     5. ES6模块	
         es6标准增加了javascript语言层面的模块体系定义
+
         优点：容易进行静态分析
+
         缺点：原生浏览器端还没有实现该标准，全新的命令字，新版的node才支持
+
         实现：Babel
 - 前端模块加载：
     ```
         分块传输，按需进行懒加载，对整个代码库中的模块进行静态分析、编译打包的过程
+        
         require加载各种资源：
-        静态分析：
-        在编译的时候，对整个代码进行静态分析，分析出各个模块的类型和它们的依赖关系，
-        将不同类型的模块提交给适配的加载器来处理
+            静态分析：
+                在编译的时候，对整个代码进行静态分析，分析出各个模块的类型和它们的依赖关系，
+                将不同类型的模块提交给适配的加载器来处理
     ```
 - webpack模块打包器，根据模块的依赖关系进行静态分析，将这些模块按指定的规则生成对应的静态资源
 ```
